--- a/app/index.html
+++ b/app/index.html
@@ -13,16 +13,10 @@
 </head>
 <body ng-cloak>
 
-  <ul class="menu">
-    <li><a href="#/home">home</a></li>
-    <li><a href="#/chat">chat</a></li>
-    <li ng-hide-auth><a href="#/login">login</a></li>
-    <li ng-show-auth><a href="#/account">account</a></li>
-  </ul>
-
-  <div ng-view></div>
-
-  <div>AngularFire-seed v<span app-version></span></div>
+  <div class="page">
+    <h1>Cloud Olympics</h1>
+    <div ng-view></div>
+  </div>
 
   <!-- In production use:
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.x/angular.min.js"></script>
@@ -36,8 +30,9 @@
   <script src="bower_components/firebase-simple-login/firebase-simple-login.js"></script>
   <script src="bower_components/angularfire/dist/angularfire.js"></script>
 
-
   <script src="js/app.js"></script>
+  <script src="js/games.js"></script>
+
   <script src="js/config.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/decorators.js"></script>
