separate CSS files and first work on homepage new layout

--- a/app/index.html
+++ b/app/index.html
@@ -8,14 +8,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
+  <link href='http://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/app.css"/>
+  <link rel="stylesheet" href="css/start.css"/>
+  <link rel="stylesheet" href="css/game.css"/>
+  <link rel="stylesheet" href="css/progress.css"/>
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body ng-cloak>
 
-  <div class="page">
-    <h1>Cloud Olympics</h1>
-    <div ng-view></div>
+  <div class="page" ng-view>
   </div>
 
   <!-- In production use:
