small style change in waiting screen

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="css/start.css"/>
   <link rel="stylesheet" href="css/game.css"/>
   <link rel="stylesheet" href="css/progress.css"/>
+  <link rel="stylesheet" href="css/waiting.css"/>
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body ng-cloak>
