--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Cloud Cup</title>
-  <meta name="description" content="">
+  <link rel="icon"
+      type="image/png"
+      href="favicon.png">
+  <meta name="description" content="Compete to win the Cloud">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
