add thumbnail for google plus

--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,11 @@
       href="favicon.png">
   <meta name="description" content="Compete to win the Cloud">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta itemprop="name" content="Cloud Cup">
+  <meta itemprop="description" content="A real time, multi-player game for Android and Chrome">
+  <meta itemprop="image" content="https://cloud-cup.firebaseapp.com/img/trophee.png">
+
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
@@ -47,7 +52,7 @@
   <script src="js/routes.js"></script>
   <script src="js/services.js"></script>
   <script src="js/firebase.utils.js"></script>
-  
+
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
