add facebook martup

--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,10 @@
   <meta itemprop="description" content="A real time, multi-player game for Android and Chrome">
   <meta itemprop="image" content="https://cloud-cup.firebaseapp.com/img/trophee.png">
 
+  <meta property="og:title" content="Cloud Cup" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://cloud-cup.firebaseapp.com/img/trophee.png" />
+
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
