even more facebook metadata

--- a/app/index.html
+++ b/app/index.html
@@ -11,12 +11,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta itemprop="name" content="Cloud Cup">
-  <meta itemprop="description" content="A real time, multi-player game for Android and Chrome">
-  <meta itemprop="image" content="https://cloud-cup.firebaseapp.com/img/trophee.png">
-
   <meta property="og:title" content="Cloud Cup" />
-  <meta property="og:type" content="website" />
+
+  <meta itemprop="image" content="https://cloud-cup.firebaseapp.com/img/trophee.png">
   <meta property="og:image" content="https://cloud-cup.firebaseapp.com/img/trophee.png" />
+
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://cloud-cup.firebaseapp.com/" />
+
+  <meta itemprop="description" content="A real time, multi-player game for Android and Chrome">
+  <meta property="og:description" content="A real time, multi-player game for Android and Chrome" />
 
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
